// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> snapshot should match snapshot 1`] = `
<Checkbox>
  <label
    className="md-checkbox-wrapper"
    data-disabled={false}
  >
    <VisuallyHidden>
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": 1,
            "margin": "0 -1px -1px 0",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
      >
        <input
          aria-checked={false}
          checked={false}
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="checkbox"
        />
      </div>
    </VisuallyHidden>
    <div
      className="md-checkbox-not-selected checkbox"
    />
  </label>
</Checkbox>
`;

exports[`<Checkbox /> snapshot should match snapshot with className 1`] = `
<Checkbox
  className="example-class"
>
  <label
    className="md-checkbox-wrapper example-class"
    data-disabled={false}
  >
    <VisuallyHidden>
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": 1,
            "margin": "0 -1px -1px 0",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
      >
        <input
          aria-checked={false}
          checked={false}
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="checkbox"
        />
      </div>
    </VisuallyHidden>
    <div
      className="md-checkbox-not-selected checkbox"
    />
  </label>
</Checkbox>
`;

exports[`<Checkbox /> snapshot should match snapshot with disabled checkbox 1`] = `
<Checkbox
  isDisabled={true}
>
  <label
    className="md-checkbox-wrapper"
    data-disabled={true}
  >
    <VisuallyHidden>
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": 1,
            "margin": "0 -1px -1px 0",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
      >
        <input
          aria-checked={false}
          checked={false}
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="checkbox"
        />
      </div>
    </VisuallyHidden>
    <div
      className="md-checkbox-not-selected checkbox"
    />
  </label>
</Checkbox>
`;

exports[`<Checkbox /> snapshot should match snapshot with id 1`] = `
<Checkbox
  id="example-id"
>
  <label
    className="md-checkbox-wrapper"
    data-disabled={false}
    id="example-id"
  >
    <VisuallyHidden>
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": 1,
            "margin": "0 -1px -1px 0",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
      >
        <input
          aria-checked={false}
          checked={false}
          disabled={false}
          id="example-id"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="checkbox"
        />
      </div>
    </VisuallyHidden>
    <div
      className="md-checkbox-not-selected checkbox"
    />
  </label>
</Checkbox>
`;

exports[`<Checkbox /> snapshot should match snapshot with indeterminate checkbox 1`] = `
<Checkbox
  isIndeterminate={true}
>
  <label
    className="md-checkbox-wrapper"
    data-disabled={false}
  >
    <VisuallyHidden>
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": 1,
            "margin": "0 -1px -1px 0",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
      >
        <input
          aria-checked="mixed"
          checked={false}
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="checkbox"
        />
      </div>
    </VisuallyHidden>
    <div
      className="md-checkbox-selected checkbox"
    >
      <Icon
        className="md-checkbox-icon"
        name="minus"
        scale={12}
        weight="bold"
      >
        <div
          className="md-icon-wrapper md-checkbox-icon"
        >
          <svg
            className=""
            data-autoscale={false}
            data-scale={12}
            data-test="minus"
            fill="currentColor"
            height="100%"
            style={Object {}}
            viewBox="0, 0, 32, 32"
            width="100%"
          />
        </div>
      </Icon>
    </div>
  </label>
</Checkbox>
`;

exports[`<Checkbox /> snapshot should match snapshot with labelled checkbox 1`] = `
<Checkbox
  label="Example text"
>
  <label
    className="md-checkbox-wrapper"
    data-disabled={false}
  >
    <VisuallyHidden>
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": 1,
            "margin": "0 -1px -1px 0",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
      >
        <input
          aria-checked={false}
          aria-label="Example text"
          checked={false}
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="checkbox"
        />
      </div>
    </VisuallyHidden>
    <div
      className="md-checkbox-not-selected checkbox"
    />
    Example text
  </label>
</Checkbox>
`;

exports[`<Checkbox /> snapshot should match snapshot with not selected checkbox 1`] = `
<Checkbox
  isSelected={false}
>
  <label
    className="md-checkbox-wrapper"
    data-disabled={false}
  >
    <VisuallyHidden>
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": 1,
            "margin": "0 -1px -1px 0",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
      >
        <input
          aria-checked={false}
          checked={false}
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="checkbox"
        />
      </div>
    </VisuallyHidden>
    <div
      className="md-checkbox-not-selected checkbox"
    />
  </label>
</Checkbox>
`;

exports[`<Checkbox /> snapshot should match snapshot with selected checkbox 1`] = `
<Checkbox
  isSelected={true}
>
  <label
    className="md-checkbox-wrapper"
    data-disabled={false}
  >
    <VisuallyHidden>
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": 1,
            "margin": "0 -1px -1px 0",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
      >
        <input
          aria-checked={true}
          checked={true}
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="checkbox"
        />
      </div>
    </VisuallyHidden>
    <div
      className="md-checkbox-selected checkbox"
    >
      <Icon
        className="md-checkbox-icon"
        name="check"
        scale={12}
        weight="bold"
      >
        <div
          className="md-icon-wrapper md-checkbox-icon"
        >
          <svg
            className=""
            data-autoscale={false}
            data-scale={12}
            data-test="check"
            fill="currentColor"
            height="100%"
            style={Object {}}
            viewBox="0, 0, 32, 32"
            width="100%"
          />
        </div>
      </Icon>
    </div>
  </label>
</Checkbox>
`;

exports[`<Checkbox /> snapshot should match snapshot with style 1`] = `
<Checkbox
  style={
    Object {
      "color": "pink",
    }
  }
>
  <label
    className="md-checkbox-wrapper"
    data-disabled={false}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <VisuallyHidden>
      <div
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": 1,
            "margin": "0 -1px -1px 0",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
      >
        <input
          aria-checked={false}
          checked={false}
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="checkbox"
        />
      </div>
    </VisuallyHidden>
    <div
      className="md-checkbox-not-selected checkbox"
    />
  </label>
</Checkbox>
`;
